--- a/haskell.org
+++ b/haskell.org
@@ -1,3 +1,9 @@
+- https://hackage.haskell.org/package/base-4.14.0.0/docs/Prelude.html#g:5
+- http://www.cis.syr.edu/~sueo/cis252/emacs.html
+- https://hoogle.haskell.org/
+- euterpea example http://donyaquick.com/interesting-music-in-four-lines-of-code/
+- quickstart euterpea https://github.com/madjestic/nu/blob/02eb3957f9ba5d0f0fbac7cd260f7142227a7008/Projects/blogs/turtlesturtlesturtles/posts/2018-11-29-a-quick-start-with-Euterpea.md
+- Euterpea Interactive-Haskell with Literate-Haskell https://github.com/lfborjas/distractions/blob/a6b6bcd09270fa73233b05f3afb1800b977da9c3/haskell_school_of_music/README.md
 - https://github.com/graninas/software-design-in-haskell
 - https://kowainik.github.io/posts/haskell-mini-patterns
 - https://github.com/kowainik/learn4haskell
@@ -56,7 +62,8 @@ https://github.com/tsoding/tsoken/blob/master/src/Main.hs
   - https://www.reddit.com/r/haskell/comments/d5og5n/which_book/
   - https://github.com/i-am-tom/haskell-exercises (extensions)
   - https://github.com/caiorss/Functional-Programming
-  - http://dev.stephendiehl.com/hask/index.html
+  - What I Wish I Knew When Learning Haskell
+    http://dev.stephendiehl.com/hask/
   - https://kowainik.github.io/posts/haskell-mini-patterns
   - https://github.com/soupi/haskell-study-plan
   - https://github.com/alpacaaa/zero-bullshit-haskell
@@ -64,13 +71,15 @@ https://github.com/tsoding/tsoken/blob/master/src/Main.hs
   - https://github.com/graninas/software-design-in-haskell
   - https://github.com/bitemyapp/learnhaskell
 * Videos
+** Tsoding
+- Haskell AMA https://www.twitch.tv/videos/736842835
+- Haskell > JavaScript https://www.twitch.tv/videos/750508584
+- Functional Programming in Production https://www.twitch.tv/videos/757306194
+- [Discord + Twitch] Double Platform ... https://www.twitch.tv/videos/764093623
+- Backend Web Programming in Haskell https://www.twitch.tv/videos/743607386
 ** Courses
    - Haskell Summer Course
      https://www.youtube.com/playlist?list=PLaAHmR4OoQXcrQl7kgkraWQAgQ-8FpEmS
-   - GoogleTechTalk Haskell 10X
-     https://www.youtube.com/watch?v=cTN1Qar4HSw
-     https://www.youtube.com/watch?v=Ug9yJnOYR4U
-     https://github.com/google/haskell-trainings
    - 2018 Haskell School in the Networked Imagination Laboratory
      https://www.youtube.com/playlist?list=PLyEzdf4cdMMHGqVnAzLV8eDXn6Ajj46JA
    - Haskell : Learn You a Haskell for Great Good
@@ -273,8 +282,59 @@ data InstrumentName = AcousticGrandPiano | BrightAcousticPiano ...
 *** 2.4 Absolute Pitches
 - LIST !! N
   [C,D,E] !! 1 => D
+** 3 Polymorphic and high order functions
+- head, tail, length (examples of simple polymorphic types)
+- map
+- append (++)
+- fold
+  foldr, foldl: only difference is from which side is applied the operator, sometimes might be more performant from one side over the other
+  foldr1, foldl1: versions that error on empty lists, so no init value needed
+- `` functions into operator with backquotes
+- () operator into a function with parentheses
+- reverse, (algorithm with foldl)
+- ~currying~
+- currying simplification
+  f x = g x
+  f   = g
+** 4
+*** 4.2 Modules
+- Module names are capitalized
+  Can be hierachical
+  import LIBRARY.FOLDER.MODULE
+- module MODULE where
+  module MODULE (EXPORT,EXPORT) where
+*** 4.3 Transcribing a More Complex Score
+**** 4.3.1 Auxiliary Functions
+- Haskell does not permit pattern-matching against function applications.
+  myFunction (Prim (Note d p)) = -- OK
+  myFunction (note d p)        = -- FAIL
+- times :: Int -> Music a -> Music a -- repeats
+  addDur
+  graceNote
+- The only special cases that will not be handled using auxiliary functions are:
+  1) the single staccato on note four of bar fifteen
+  2) the single portamento on note three of bar sixteen.
+  These situations will be addressed differently in a later chapter.
+*** 4.4 Simple Algorithmic Composition
+
 * TODO Book: Real World Haskell
-https://github.com/tssm/up-to-date-real-world-haskell/
+- Updated code version
+  https://github.com/tssm/up-to-date-real-world-haskell/
+- Real World Haskell outdated parts
+  https://stackoverflow.com/questions/23727768/which-parts-of-real-world-haskell-are-now-obsolete-or-considered-bad-practice
+** 6 Using Typeclasses
+- Different implementation depending on the type of data given.
+- Defining a new ~Typeclass~ named "BasicEq".
+#+begin_src haskell
+class BasicEq a where
+    isEqual :: a -> a -> Bool
+#+end_src
+- An ~Instance Type~ of this typeclass, is any function that implements the functions defined in it.
+- isEqual :: (BasicEq a) => a -> a -> Bool
+  Reads:
+  "For all types of a,
+   so long as a is an instance of BasicEq,
+   isEqual takes two parameters of type a and returns Bool""
 ** 7
 - ~Type classes~ provide ad-hoc polymorphism
   - Can define default "implementations" for the class
@@ -289,6 +349,51 @@ instance Show Color where
   show Green = "verde"
   show Blue = "azul"
     #+end_src
+
+* TODO Book: The Haskell School of Expressive Language
+** 3 Simple Graphics
+*** 3.1 Basic Input/Output
+- ~Standard Prelude~ and ~Standard Libraries~
+- () is called ~unit type~, ans has only () as value
+- IO
+  There is a special kind of ~value~ called ~action~.
+  It won't try to display it but it will take action.
+  Ex: writing to a file or reading from keyboard.
+  ~expressions~ or functions that evaluate to an action are called ~commands~
+- IO () is often called a ~noop~, it is an action that returns ()
+- putStr, putChar, writeFile, readFile, do, getLine
+- ??? you can put actions on a list, but won't "do" anything unless on a do or a main ???
+- sequence applied to IO has this signature
+  sequence :: [IO a] -> IO ()
+
+*** 3.2 Graphics Windows
+- sierpinsky
+#+begin_src haskell
+fillTri :: Window -> Int -> Int -> Int -> IO ()
+fillTri w x y size =
+  drawInWindow w
+  $ withColor Green
+  $ polygon [(x,y), (x + size, y), (x, y - size), (x,y)]
+
+minSize :: Int
+minSize = 8
+
+sierpinskiTri :: Window -> Int -> Int -> Int -> IO ()
+sierpinskiTri w x y size
+  | size <= minSize = fillTri w x y size
+  | otherwise       = let size2 = size `div` 2
+                      in do sierpinskiTri w x y size2
+                            sierpinskiTri w x (y - size2) size2
+                            sierpinskiTri w (x + size2) y size2
+#+end_src
+- david star:
+  1) draw a equilateral triangle
+  2) draw a new one rotated 180
+  3) do 1 and 2 for each corner, but with 1/3 of a triangle size
+** 4 Shapes II: Drawing shapes
+- Many indirect graphics functions, to:
+  1) being able to work with each shape properties
+** 5 Polymorphic and High-order Funtions
 * DONE Book: Seven Languages in 7 weeks
 ** Haskell
 - "In Haskell, indentation is significant." (?
@@ -327,34 +432,204 @@ factorio x
   - Like overload of operators
 - TALK ABOUT MONADS????
 - RESUME 20:00
+* TODO Videos: HaskellRank by tsoding
+https://www.youtube.com/playlist?list=PLguYJK7ydFE4aS8fq4D6DqjF6qsysxTnx
+** DONE HackerRank in Haskell
+- interact :: (String -> String) -> IO ()
+- We go from an expression that we can use on the repl to a function. By replacing ($) with (.)
+- Functions: ($) (.) interact words read map sum show tail
+#+begin_src haskell
+main = interact $ show . sum . map read . words
+main = interact $ show . sum . map read . tail . words
+#+end_src
+** DONE Grading Students
+- (``) , guards, where, unlines
+#+begin_src haskell
+round5 :: Int -> Int
+round5 x
+    | x >= 38 && (m5 - x) < 3 = m5
+    | otherwise               = x
+    where m5 = x + (5 - x `mod` 5)
+
+solve :: [Int] -> [Int]
+solve xs = map round5 xs
+
+main = interact $ unlines . map show . solve . map read . tail . words
+#+end_src
+** DONE Apples and Oranges
+- take, drop, filter
+#+begin_src haskell
+let (x1:x2:xs) = [1,2,3,4,5,6,7] -- Pattern Matching
+-- lambdas
+map (\x -> x + 3) [0,1,2] -- => [3,4,5]
+map (+ 3)         [0,1,2] -- => [3,4,5]
+#+end_src
+** DONE Code Warrior
+- undefined :: t -- can be assigned to any type, useful to know if code just compiles
+- !!
+- div  :: Integral a => a -> a -> a
+- even :: Integral a => a -> Bool
+- odd  :: Integral a => a -> Bool
+** DONE Between Two Sets
+- foldl1, gcd, lcm, takeWhile
+- [1 .. 4]
+  [1 ..]
+- Imperatively writing in Haskell
+#+begin_src haskell
+solve :: [Int] -> [Int] -> Int
+solve = undefined
+
+readIntList :: IO [Int]
+readIntList = do line <- getLine
+                 return $ map read $ words line
+main = do [n, m] <- readIntList
+          as     <- readIntList
+          bs     <- readIntList
+          putStrLn $ show $ solve as bs
+#+end_src
+
+** DONE Fold
+- "Neutral element" on fold
+#+begin_src haskell
+Import Prelude hiding (foldl) -- Hide!!!
+
+foldl :: (a -> b -> a) -> a -> [b] -> a
+foldl f base []     = base
+foldl f base (x:xs) = foldl f (f base x) xs
+
+foldl1 :: (a -> a -> a) -> [a] -> a
+foldl1 f []     = error "basaodka"
+foldl1 f (x:xs) = foldl f x xs
+#+end_src
+** DONE Playing Basketball with Kangaroo
+- maximum, minimum, inits, group
+#+begin_src haskell
+import Data.List
+inits :: [a] -> [[a]]
+
+λ> inits [1 .. 5]
+[[],[1],[1,2],[1,2,3],[1,2,3,4],[1,2,3,4,5]]
+
+λ> map maximum $ tail $ inits [10,5, 20, 4 ,5,2,25,1]
+[10,10,20,20,20,20,25,25]
+
+λ> group $ map maximum $ tail $ inits [10,5, 20, 4 ,5,2,25,1]
+[[10,10],[20,20,20,20],[25,25]]
+#+end_src
+** DONE Purely Functional Solutions to Imperative Problems
+*** 1
+- zip
+- List comprehension
+#+begin_src haskell
+[i     | i <- [1 .. 10]] -- [1,2,3,4,5,6,7,8,9,10]
+[(i,j) | i <- [1 .. 10], j <- [1 .. 10]] -- cartesian product [(1,1),(1,2),(1,3)...]
+[(i,j) | i <- [1 .. 10], j <- [1 .. 10], i /= 1] -- filter
+---
+-- Uses undefined as elements of an array, can also use ()
+solve :: [Int] -> Int
+solve (k:xs) =
+  length [ undefined | (i, xi) <- zip [0 ..] xs,
+                       (j, xj) <- zip [0 ..] xs,
+                       i < j,
+                       (xi + xj) `mod` k == 0]
+#+end_src
+*** 2
+- group, sort, sortBy, on, compare, reverse, flip
+- Ordening is the type that has 3 constructors: LT, EQ, GT
+- You can compare numbers, or lists. But for special orders.
+  compare :: Ord a => a -> a -> Ordering
+  map compare [1,3,4]
+- on basically adapts the first func with the second
+  on :: (b -> b -> c) -> (a -> b) -> a -> a -> c
+#+begin_src haskell
+-- :m + Data.List
+import Data.List     -- For sort
+import Data.Function -- For on
+sortBy (\x y -> compare (length x) (length y)) [[1,2,3,4],[2,2],[0,0,0,0,0,0,0]]
+sortBy (compare `on` length)                   [[1,2,3,4],[2,2],[0,0,0,0,0,0,0]]
+-- => [[2,2],[1,2,3,4],[0,0,0,0,0,0,0]]
+sortBy (compare `on` length) $ group $ sort [1,4,4,4,5,5,5,3]
+reverse $ sortBy (compare `on` length) $ group $ sort [1,4,4,4,5,5,5,3]
+sortBy (flip compare `on` length) $ group $ sort [1,4,4,4,5,5,5,3]
+-- => [[1],[3],[4,4,4],[5,5,5]]
+#+end_src
+** DONE Solving Russian Calendar Problems in Haskell
+- sum, printf (alternative to ++)
+- ~eta conversion~ of \x -> abs being equal to abs
+#+begin_src haskell
+import Text.Printf
+
+leapDay :: Int -> String
+leapDay = printf "12.09.%d"
+
+normDay :: Int -> String
+normDay = printf "13.09.%d"
+#+end_src
+** DONE The Usefulness of Maybe monad
+- splitAt, maybe, replicateM, read
+- a type called ~Maybe~ (Just, Nothing)
+  a function ~maybe~ to unwrap it
+- replicateM to perform a task Nth times and return in an array
+#+begin_src haskell
+import Control.Monad -- for replicateM
+
+excludeNth :: Int -> [a] -> [a]
+excludeNth n xs = left ++ tail right
+    where (left, right) = splitAt n xs
+-- excludeNth 5 [1..10]
+-- => [1,2,3,4,5,7,8,9,10]
+
+getList :: Read a -> IO [a] -- read any type of input
+getList = do
+  line <- getLine
+  return $ map read $ words line
+-- getList :: IO [Int]
+-- 1 2 3 4
+-- => [1,2,3,4]
+
+solve :: Int -> [Int] -> Int -> Maybe Int
+solve k bill b
+    | b > actualPrice = Just (b - actualPrice)
+    | otherwise = Nothing
+    where actualPrice = (sum $ excludeNth k bill) `div` 2
+
+main :: IO ()
+main = do
+  [[_, k], bill, [b]] <- replicateM 3 getList
+  putStrLn $ maybe "Bon appetit" show $ solve k bill b
+#+end_src
+** Tracking Hikes with Haskell
+** Treating Lists as Monads
+** Solving Magic Square using Functional Programming
+** Brute-forcing all Magic Squares
+** CodeWars Strikes Again
 * TODO Course: Haskell by Bartosz Milewski https://www.youtube.com/playlist?list=PL0pwx9zqJ9IamHxRXTf34dC3JeQ2oYmfJ
-** 1-1 => Why Haskell? https://www.youtube.com/watch?v=N6sOMGYsvFA
+** DONE 1-1 => Why Haskell? https://www.youtube.com/watch?v=N6sOMGYsvFA
 - Course based on "Parallel and concurrent programming" Oreilly book
 - Based on math, lambda calculus
-- lists are the core DS while in other langs would be an array
-** 1-2 => Functions https://www.youtube.com/watch?v=ybba5tcOeEY
+- Lists are the core DS while in other langs would be an array
+** DONE 1-2 => Functions https://www.youtube.com/watch?v=ybba5tcOeEY
 - keep the more reocurring thing simple
   - in morse code (? the letter "e" is just a dot
 - ~function application~ is the strongest binding
   7 - f x y z - 1
 - no variables in haskell, they are nonary functions
-- load file
-  #+begin_src haskell
+- write file
+#+begin_src haskell
 sqDist :: Num a => a -> a -> a
 sqDist x y = x^2 + y ^2
 
 main = print (sqDist 3 4)
-  #+end_src
-  #+begin_src
-  Prelude> :l main.hs
-  [1 of 1] Compiling Main             ( main.hs, interpreted )
-  Ok, one module loaded.
-  *Main> main
-  25
-  *Main> :t sqDist
-  sqDist :: Num a => a -> a -> a
-  #+end_src
-- there are things that are not expressable in haskell, that are left to the used (axioms)
+#+end_src
+- load foñe
+#+begin_src haskell
+> :l main.hs
+> main
+25
+> :t sqDist
+sqDist :: Num a => a -> a -> a
+#+end_src
+- there are things that are NOT expressable in haskell, that are left to the used (axioms)
 - main :: IO ()
   print :: Show a => a -> IO ()
   putStrLn :: String -> IO ()
@@ -367,7 +642,7 @@ main = print (sqDist 3 4)
   :i info
   #+end_src
 - Num is a ~class of types~, Double is type
-** 2-1 => More Functions
+** DONE 2-1 => More Functions
 - on tuples: fst, snd
 - lowest possible binding is $
 - (.) ~function composition~, very high precedence
@@ -384,32 +659,30 @@ main = print (sqDist 3 4)
   - adhoc: different behaviour for different types of arguments
 - code
   #+begin_src haskell
--- using ($)
-main = print $ sqDist 3 4
--- using ($) when accepting a tuple
-sqDist (x,y) = x^2 + y ^2
+main = print $ sqDist 3 4 -- using ($)
+
+sqDist (x,y) = x^2 + y ^2 -- using ($) on a tuple
 main = print $ sqDist $ (3,4)
--- replacing parens
-sq x = x * x
+
+sq x = x * x -- replacing parens
 main = print $ sq $ 2 + 3
 main = print $ sq (2 + 3)
--- NOT the same
-main = print $ sq 2+3
--- Partial Application in Function composition
--- pt means here PA^
---dist pt = sqrt $ sqDist pt
+main = print $ sq 2+3 -- NOT the same
+
+dist pt = sqrt $ sqDist pt -- Partial Application in Function composition
 dist = sqrt . sqDist
   #+end_src
-** 2-2 => Product data types https://www.youtube.com/watch?v=a6IkhX1zgXI
-- (+) 3 2 -- changingn infix to prefix operator with parens
-- inc x = 1 + x
-  inc x = (+) 1 x
-  inc   = (+ 1)    -- x cancells out
-- partial application of an operator is called ~operator section~
+** DONE 2-2 => Product data types https://www.youtube.com/watch?v=a6IkhX1zgXI
 - ELM isn't lazy evaluated
+#+begin_src haskell
+inc x = 1 + x
+inc x = (+) 1 x  -- () changes infix to prefix operator
+inc   = (+ 1)    -- "x" cancells out
+#+end_src
+- partial application of an operator is called ~operator section~
 - ~Void~ is type with no elements
 - ~Unit~ is the "Singleton" Type denoted by "()", tuple of 0 elements
-- Define a ~new type~ with:
+- Define a ~NEW type~ with:
   > data Unit = CONSTRUCTOR
               = U
   > data ()   = ()
@@ -422,21 +695,29 @@ dist = sqrt . sqDist
   P :: a -> b -> Product a b
 - ~Destructuring~ happens with the Data Constructor
   > f (P x y) = x + y
-- When you have more tha 2 components, you are better using a ~record~ where fields are named
+- When you have more than 2 components, you are better using a ~record~ where fields are named
 - 2 ways of constructing new data types??
 ** 3-1 => Laziness https://www.youtube.com/watch?v=jWrRs-l8C1U
+:set -Wall
+:set -fforce-recomp
+*** Kinds
 - "In haskell we don't want to use many names, because the polute the namespace"
 - ~*~ in type definitions means "any type"
+- (,) is the data constructor for pair
+- The Type Constructors have types and those types are called ~kinds~
 - use ~:k~ to get the kind of the argument
-- > :t (,) -- Data Constructor
-  (,) :: a -> b -> (a, b)
-  > :k (,) -- Type Constructor
-  (,) :: * -> * -> *
-- "if you define a data type in Haskell you can promote it to a kind"????
+#+begin_src haskell
+> :t (,) -- Data Constructor
+(,) :: a -> b -> (a, b)
+> :k (,) -- Type Constructor
+(,) :: * -> * -> *
+#+end_src
+- "If you define a data type in Haskell you can promote it to a kind"????
+*** Lazyness
 - Haskell by default is lazy evaluated
-- :sprint prints a value without evaluating it
+- ~:sprint~ prints a value WITHOUT evaluating it
 - Haskell has ~polymorphic values~, so we need to type "x" here
-#+begin_src
+#+begin_src haskell
 > let x = 1 + 2 :: Int
 > :sprint x
 x = _
@@ -445,8 +726,8 @@ x = _
 > :sprint x
 x = 3
 #+end_src
-- We can for eager evaluation by using ~seq~, it "sequences" the arguments, it evaluates the 1st before the 2nd
-#+begin_src
+- We can force eager evaluation by using ~seq~, it "sequences" the arguments, it evaluates the 1st before the 2nd
+#+begin_src haskell
 > let x = 2 + 3 :: Int
 > let y = x + 1
 > print (seq y ())
@@ -454,11 +735,11 @@ x = 3
 > :sprint y
 y = 6
 #+end_src
-- swap
-#+begin_src
-Prelude> import Data.Tuple
-Prelude Data.Tuple> let z = swap (x,x+1)
-Prelude Data.Tuple> :sprint z
+- ~swap~
+#+begin_src haskell
+> import Data.Tuple
+> let z = swap (x,x+1)
+> :sprint z
 z = _
 #+end_src
 ** 3-2 => Sum types https://www.youtube.com/watch?v=MagayXbH4oY
@@ -471,8 +752,8 @@ data Either a b = Left a | Right b
 safeSqrt :: Either String Double -> Either String Double
 safeSqrt (Left str) = Left str
 safeSqrt (Right x) = if x < 0
-                      then Left "Error"
-                      else Right (sqrt x)
+                     then Left "Error"
+                     else Right (sqrt x)
 -- Alternative using case
 safeSqrt sx =
     case sx of
@@ -505,44 +786,62 @@ type Z a = (a, Void)    -- a * 0 = 0
 ** 7-2 => Parallel sudoku solver, strategies, overview of Haskell parallelism.
 ** 8-1 => Concurrent Haskell, MVars
 ** 8-2 => Software Transactional Memory
-* TODO Videos: HaskellRank by tsoding
-https://www.youtube.com/playlist?list=PLguYJK7ydFE4aS8fq4D6DqjF6qsysxTnx
-** DONE HackerRank in Haskell
-- Two number from stdin and print the sum
-- We go from an expression that we can use on the repl to a function. $ -> .
-- Functions: ($) (.) interact words read map sum show tail
-#+NAME: idiomatic #1
+* TODO Course: Haskell 10X - Google TechTalks
+  repo: https://github.com/google/haskell-trainings
+** DONE Haskell 101 https://www.youtube.com/watch?v=cTN1Qar4HSw
+- There is NO function that can go from impure to pure code
+  f :: IO a -> a
+- Going from pure to impure is ok
+  f :: a -> IO a
+- Strict evaluation: inner to outer
+  Lazy evaluation: outer to inner (when needed you eval the arguments)
+- Lazyness:
+  - Memory pitfalls
+  - IO and parallelism pitfalls: threads will just create the expressions, not evaluate them
+  + Huge optimizations: compiler can re-arrange the code, simplify noop operations,
+                        partially thanks to knowing about pure/impurity of a function
+  + Great expressivity (e.g. infinite structures)
+- Is NOT recommended to create your own operators.
+- ($) lowest priority
+- ~type synonyms~
+  type Point = (Int, Int)
+  type Map k v = [(k, v)] -- ~type parameters~
+- ~data structures~
+  - NO methods
+  - NO modifiers (setters)
+  - NO private members/slots
+  - YES Constructors
+- data
 #+begin_src haskell
-main = interact $ show . sum . map read . words
+data None    = None
+data Minutes = Minutes Int      -- Minutes 10
+data Bool    = False   | True
+data Maybe a = Nothing | Just a -- Just 10
+data List  a =     Nil | Cell a (List a)
+-- Records, named "fields". Fields are in the same namespace.
+data User = User String Int
+data User = User {
+    userName :: String,
+    userAge  :: Int
+}
 #+end_src
-#+NAME: idiomatic #2
+- Operators can be constructors
+- Operators pattern matching CAN short-circuit
 #+begin_src haskell
-main = interact $ show . sum . map read . tail . words
+(&&) :: Bool -> Bool -> Bool
+True && True = True -- does NOT short-circuit (comment this line)
+True && y    = y    -- does short-circuit
+x    && y    = False
 #+end_src
-** DONE Grading Students
-- (``) , guards, where, unlines
+- Deconstructor, pattern matching
 #+begin_src haskell
-round5 :: Int -> Int
-round5 x
-    | x >= 38 && (m5 - x) < 3 = m5
-    | otherwise               = x
-    where m5 = x + (5 - x `mod` 5)
-
-solve :: [Int] -> [Int]
-solve xs = map round5 xs
-
-main = interact $ unlines . map show . solve . map read . tail . words
+data Minutes = Minutes Int
+add :: Minutes -> Minutes -> Minutes
+add (Minutes x) (Minutes y) = Minutes $ x + y
 #+end_src
-** Apples and Oranges
-
-** Code Warrior
-** Between Two Sets
-** Fold
-** Playing Basketball with Kangaroo
-** Purely Functional Solutions to ImperaSolving Russian Calendar Problems in Haskell
-** The Usefulness of Maybe monad
-** Tracking Hikes with Haskell
-** Treating Lists as Monads
-** Solving Magic Square using Functional Programming
-** Brute-forcing all Magic Squares
-** CodeWars Strikes Again
+- "backslash because it kind of looks like a lambda"
+- head is considered "bad design", as in some of the inputs panics
+  also callled partial functions
+- Point free style: is when we define functions without defining the arguments.
+                    Because it doesn't use the (.) operator.
+** Haskell 102 https://www.youtube.com/watch?v=Ug9yJnOYR4U
