--- a/other/ai.org
+++ b/other/ai.org
@@ -1,3 +1,6 @@
+- Will Kwan https://www.youtube.com/c/WillKwan/videos
+- Instituto de Calculo Secretaria https://www.youtube.com/channel/UCzcbeaNQEIhOFBRBdYx1NEA
+- https://www.youtube.com/user/MinisterioDeCiencia/videos
 - https://www.youtube.com/channel/UCfxnrdBM1YRV9j2MB8aiy4Q
 - Deeplearning - Udacity - https://www.youtube.com/playlist?list=PLAwxTw4SYaPn_OWPFT9ulXLuQrImzHfOV
 - https://www.youtube.com/c/SirajRaval/videos
